--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "nodemon": "^2.0.16"
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.3.6",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.16",
+    "uuid": "^8.3.2"
   }
 }
